--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "~19.0.0",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "flow-bin": "0.42",
+    "react-native-scripts": "^1.7.0"
   },
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
@@ -22,6 +25,9 @@
     "react-native-wkwebview-reborn": "^1.8.0",
     "native-base": "^2.3.2",
     "react-native-vector-icons": "^4.4.0",
-    "react-navigation": "^1.0.0-beta.13"
-  }
+    "react-navigation": "^1.0.0-beta.13",
+    "expo": "24.0.2",
+    "@expo/vector-icons": "^6.2.2"
+  },
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js"
 }
