--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "Wcloud",
+  "name": "gooderp-mobile",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "~19.0.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "flow-bin": "0.42",
-    "react-native-scripts": "^1.7.0"
+    "react-native-scripts": "^1.14.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-object-rest-spread": "",
+    "babel-cli": "^6.24.1",
+    "babel-jest": "17.0.2",
+    "babel-preset-react-native": "1.9.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-hot-middleware": "^2.20.0",
+    "eslint": "^3.18.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^6.10.3"
   },
   "scripts": {
     "start": "react-native-scripts start",
@@ -20,14 +35,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1",
-    "react-native-wkwebview-reborn": "^1.8.0",
-    "native-base": "^2.3.2",
-    "react-native-vector-icons": "^4.4.0",
-    "react-navigation": "^1.0.0-beta.13",
+    "@expo/vector-icons": "^6.2.2",
     "expo": "24.0.2",
-    "@expo/vector-icons": "^6.2.2"
+    "react": "16.0.0",
+    "react-native": "0.51.0",
+    "react-native-wkwebview-reborn": "^1.8.0",
+    "native-base": "2.3.2",
+    "react-native-vector-icons": "4.3.0",
+    "react-navigation": "^1.0.0-beta.13"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js"
 }
