--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gooderp-mobile",
+  "name": "qiyuan-mobile",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -42,7 +42,14 @@
     "react-native-wkwebview-reborn": "^1.8.0",
     "native-base": "2.3.2",
     "react-native-vector-icons": "4.3.0",
-    "react-navigation": "^1.0.0-beta.13"
+    "react-navigation": "^1.0.0-beta.13",
+    "react-redux": "5.0.5",
+    "redux": "3.7.2",
+    "redux-form": "7.0.3",
+    "redux-persist": "4.8.3",
+    "redux-thunk": "2.2.0",
+    "remote-redux-devtools": "0.5.0",
+    "remote-redux-devtools-on-debugger": "^0.8.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js"
 }
