--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "qiyuan-mobile",
+  "name": "odoo-mobile",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "~19.0.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "flow-bin": "0.42",
     "react-native-scripts": "^1.14.1",
@@ -25,18 +24,15 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.2",
-    "expo": "24.0.2",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-wkwebview-reborn": "^1.8.0",
@@ -49,7 +45,7 @@
     "redux-persist": "4.8.3",
     "redux-thunk": "2.2.0",
     "remote-redux-devtools": "0.5.0",
-    "remote-redux-devtools-on-debugger": "^0.8.0"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js"
+    "remote-redux-devtools-on-debugger": "^0.8.0",
+    "color": "3.1.0"
+  }
 }
