--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=odoo-mobile-key
+MYAPP_RELEASE_STORE_PASSWORD=yesnoyesno
+MYAPP_RELEASE_KEY_PASSWORD=yesnoyesno
