--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "color": "3.1.0",
+    "native-base": "2.3.2",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-wkwebview-reborn": "^1.8.0",
-    "native-base": "2.3.2",
     "react-native-vector-icons": "4.3.0",
+    "react-native-wkwebview-reborn": "^1.8.0",
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
@@ -46,6 +47,6 @@
     "redux-thunk": "2.2.0",
     "remote-redux-devtools": "0.5.0",
     "remote-redux-devtools-on-debugger": "^0.8.0",
-    "color": "3.1.0"
+    "yarn": "^1.12.3"
   }
 }
