--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,9 +72,9 @@ import com.android.build.OutputFile
  * ]
  */
 
-project.ext.react = [
-        bundleInDebug: true,
-]
+//project.ext.react = [
+//        bundleInDebug: true,
+//]
 project.ext.vectoricons = [
         iconFontNames: ['MaterialIcons.ttf', 'EvilIcons.ttf', 'FontAwesome.ttf'] // Name of the font files you want to copy
 ]
