--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-native": "0.51.0",
     "react-native-vector-icons": "4.3.0",
     "react-native-wkwebview-reborn": "^1.8.0",
-    "react-navigation": "^1.0.0-beta.13",
+    "react-navigation": "2.18.3",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
     "redux-form": "7.0.3",
