--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": [ "react-native"],
-  "env": {
-    "development": {
-      "plugins": ["transform-react-jsx-source","transform-object-rest-spread"]
-    }
-  }
+  "presets": ["module:metro-react-native-babel-preset"]
 }
