--- a/package.json
+++ b/package.json
@@ -3,30 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-test-renderer": "16.0.0-alpha.12",
-    "flow-bin": "0.42",
-    "react-native-scripts": "^1.14.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-object-rest-spread": "",
-    "babel-cli": "^6.24.1",
-    "babel-jest": "17.0.2",
-    "babel-preset-react-native": "1.9.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-hot-middleware": "^2.20.0",
-    "eslint": "^3.18.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^6.10.3"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.51.0",
+    "react-test-renderer": "16.6.3"
   },
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "jest": {
@@ -34,19 +17,17 @@
   },
   "dependencies": {
     "color": "3.1.0",
-    "native-base": "2.3.2",
-    "react": "16.0.0",
-    "react-native": "0.51.0",
-    "react-native-vector-icons": "4.3.0",
-    "react-native-wkwebview-reborn": "^1.8.0",
+    "native-base": "2.8.2",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-vector-icons": "6.1.0",
+    "react-native-wkwebview-reborn": "2.0.0",
     "react-navigation": "2.18.3",
-    "react-redux": "5.0.5",
-    "redux": "3.7.2",
-    "redux-form": "7.0.3",
-    "redux-persist": "4.8.3",
-    "redux-thunk": "2.2.0",
-    "remote-redux-devtools": "0.5.0",
-    "remote-redux-devtools-on-debugger": "^0.8.0",
-    "yarn": "^1.12.3"
+    "react-redux": "6.0.0",
+    "redux": "4.0.1",
+    "redux-form": "8.0.4",
+    "redux-persist": "5.10.0",
+    "redux-thunk": "2.3.0",
+    "remote-redux-devtools": "0.5.14"
   }
 }
