--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.0",
+    "metro-react-native-babel-preset": "^0.52.0",
     "react-test-renderer": "16.6.3"
   },
   "scripts": {
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "color": "3.1.0",
-    "native-base": "2.8.2",
+    "native-base": "^2.12.0",
     "react": "16.6.3",
-    "react-native": "0.57.8",
+    "react-native": "^0.58.5",
     "react-native-vector-icons": "6.1.0",
     "react-native-wkwebview-reborn": "2.0.0",
     "react-navigation": "2.18.3",
@@ -28,6 +28,6 @@
     "redux-form": "8.0.4",
     "redux-persist": "5.10.0",
     "redux-thunk": "2.3.0",
-    "remote-redux-devtools": "0.5.14"
+    "remote-redux-devtools": "^0.5.16"
   }
 }
